Fixed responsive layout bug.

--- a/static/css/landing_css/style.css
+++ b/static/css/landing_css/style.css
@@ -1795,6 +1795,10 @@ SERVICE PAGE
     font-size: 16px;
   }
 
+  .banner-content {
+    padding-right: 0;
+  }
+
   /*----------------
      INTRO
     ----------------*/
